--- a/task11/Segmentation.ipynb
+++ b/task11/Segmentation.ipynb
@@ -2,79 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from scipy.ndimage import label\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "img = cv.imread(\"segmentation.jpg\")\n",
-    "img = cv.resize(img, (800, 800))\n",
-    "gray = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "# noise removal\n",
-    "ret, img_morph = cv.threshold(gray, 0, 255, cv.THRESH_OTSU)\n",
-    "kernel = np.ones((3, 3), np.uint8)\n",
-    "img_morph = cv.morphologyEx(img_morph, cv.MORPH_OPEN, kernel)\n",
-    "img_copy = img.copy()"
-   ]
+    "save_steps = False\n",
+    "low_threshold = 0\n",
+    "iteration_num = 5\n",
+    "src = cv2.imread('img.png')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 131,
    "outputs": [],
    "source": [
-    "low_threshold = 0\n",
-    "high_threshold = 255\n",
-    "iteration_num = 5\n",
-    "INTERNAL_STEPS = False\n",
-    "\n",
-    "\n",
     "def update():\n",
-    "\t# sure background area\n",
-    "\tdilated_img = cv.dilate(img_morph, kernel, iterations=iteration_num)\n",
+    "\timg = src.copy()\n",
+    "\tgray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\t_, thresh = cv2.threshold(gray, low_threshold, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
+    "\tkernel = np.ones((3, 3), np.uint8)\n",
+    "\tsure_bg = cv2.dilate(thresh, kernel, iterations=iteration_num)\n",
+    "\tdist_transform = cv2.distanceTransform(sure_bg, 1, 5)\n",
+    "\tdist_transform = np.uint8(dist_transform)\n",
+    "\t_, sure_fg = cv2.threshold(dist_transform, low_threshold, 255, 0)\n",
     "\n",
-    "\t# erosion\n",
-    "\tdilated_img = dilated_img - cv.erode(dilated_img, None)\n",
+    "\tsure_fg = np.uint8(sure_fg)\n",
+    "\tunknown = cv2.subtract(sure_bg, sure_fg)\n",
     "\n",
-    "\t# Finding sure foreground area\n",
-    "\tdistances_transform = cv.distanceTransform(img_morph, cv.DIST_L2, 3)\n",
+    "\t_, markers = cv2.connectedComponents(sure_fg)\n",
+    "\tmarkers = markers + 1\n",
     "\n",
-    "\tif INTERNAL_STEPS:\n",
-    "\t\tcv.imshow('distances', distances_transform)\n",
+    "\tmarkers[unknown == 255] = 0\n",
     "\n",
-    "\t_, thresh = cv.threshold(distances_transform, low_threshold, high_threshold, cv.THRESH_BINARY)\n",
+    "\tmarkers = cv2.watershed(img, markers)\n",
     "\n",
-    "\tif INTERNAL_STEPS:\n",
-    "\t\t# show thresh changing\n",
-    "\t\tcv.imshow('thresh', thresh)\n",
+    "\timg[markers == -1] = (0, 0, 255)\n",
+    "\t# img = cv2.resize(img, (800, 800))\n",
+    "\tcv2.imshow(\"img\", img)\n",
     "\n",
-    "\tlabels, num_features = label(thresh)\n",
-    "\t# Multiplying label array on 255 / (number of features + 1) to prevent deviding on zero\n",
-    "\tlabels = labels * (255 / (num_features + 1))\n",
-    "\t# Completing the markers now\n",
-    "\tlabels[dilated_img == 255] = 255\n",
-    "\t# Using watershed\n",
-    "\tlabels = labels.astype(np.int32)\n",
-    "\tlabels = cv.watershed(img, labels)\n",
-    "\tif INTERNAL_STEPS:\n",
-    "\t\tcv.imshow('labels', cv.convertScaleAbs(labels))\n",
-    "\t# Changing values that is equal -1\n",
-    "\tlabels[labels == -1] = 0\n",
-    "\t# Getting outlines as result\n",
-    "\tmarkers = 255 - labels.astype(np.uint8)\n",
-    "\tmarkers[markers != 255] = 0\n",
-    "\tmarkers = cv.dilate(markers, None)\n",
-    "\t#copy original image to add on it edges\n",
-    "\tresult = img.copy()\n",
-    "\tresult[markers == 255] = (0, 255, 0)\n",
-    "\tif INTERNAL_STEPS:\n",
-    "\t\tcv.imshow('Outlines', markers)\n",
-    "\tcv.imshow('Result', result)\n",
+    "\tif save_steps:\n",
+    "\t\tplt.rcParams['figure.dpi'] = 250\n",
+    "\t\tplt.subplot(241)\n",
+    "\t\tplt.imshow(cv2.cvtColor(src, cv2.COLOR_BGR2RGB)),\n",
+    "\t\tplt.title('Original')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(242)\n",
+    "\t\tplt.imshow(thresh, cmap='gray'),\n",
+    "\t\tplt.title('Threshold')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(243)\n",
+    "\t\tplt.imshow(sure_bg, cmap='gray'),\n",
+    "\t\tplt.title('Dilate')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(244)\n",
+    "\t\tplt.imshow(dist_transform, cmap='gray'),\n",
+    "\t\tplt.title('Dist Transform')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(245)\n",
+    "\t\tplt.imshow(sure_fg, cmap='gray'),\n",
+    "\t\tplt.title('Threshold')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(246)\n",
+    "\t\tplt.imshow(unknown, cmap='gray'),\n",
+    "\t\tplt.title('Unknow')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(247)\n",
+    "\t\tplt.imshow(np.abs(markers), cmap='jet'),\n",
+    "\t\tplt.title('Markers')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.subplot(248)\n",
+    "\t\tplt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB)),\n",
+    "\t\tplt.title('Result')\n",
+    "\t\tplt.axis('off')\n",
+    "\t\tplt.savefig('steps.png')\n",
     "\n",
     "\n",
     "def change_low_threshold(val):\n",
@@ -94,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 132,
    "outputs": [],
    "source": [
-    "cv.imshow('thresh', img_morph)\n",
-    "cv.createTrackbar('thresh low', 'thresh', 20, 255, change_low_threshold)\n",
-    "cv.createTrackbar('iterations', 'thresh', 5, 100, change_iteration_num)\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
+    "cv2.namedWindow('Control')\n",
+    "cv2.createTrackbar('thresh low', 'Control', 20, 255, change_low_threshold)\n",
+    "cv2.createTrackbar('iterations', 'Control', 5, 100, change_iteration_num)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ],
    "metadata": {
     "collapsed": false
