--- a/task10/FeatureMatching.ipynb
+++ b/task10/FeatureMatching.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 155,
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
     "\n",
     "\n",
     "MAX_FEATURES = 100\n",
-    "GOOD_MATCH_PERCENT = 0.25"
+    "GOOD_MATCH_PERCENT = 0.2"
    ],
    "metadata": {
     "collapsed": false
@@ -26,16 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 156,
    "outputs": [],
    "source": [
     "def filterMatches(_matches):\n",
-    "\t# Sort matches by score\n",
     "\t_matches = sorted(_matches, key=lambda x: x.distance, reverse=False)\n",
-    "\n",
-    "\t# Remove not so good matches\n",
-    "\tgoodMatchesAmount = int(len(_matches) * GOOD_MATCH_PERCENT)\n",
-    "\treturn _matches[:goodMatchesAmount]"
+    "\treturn _matches[:int(len(_matches) * GOOD_MATCH_PERCENT)]"
    ],
    "metadata": {
     "collapsed": false
@@ -43,25 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 157,
    "outputs": [],
    "source": [
     "def matchImages(image1, image2):\n",
     "\tim1Gray = cv.cvtColor(image1, cv.COLOR_BGR2GRAY)\n",
     "\tim2Gray = cv.cvtColor(image2, cv.COLOR_BGR2GRAY)\n",
     "\n",
-    "\t# Detect ORB features and compute descriptors.\n",
     "\torb = cv.ORB_create(MAX_FEATURES)\n",
     "\tkeyPoints1, descriptors1 = orb.detectAndCompute(im1Gray, None)\n",
     "\tkeyPoints2, descriptors2 = orb.detectAndCompute(im2Gray, None)\n",
     "\n",
-    "\t# Match features.\n",
-    "\tmatches = cv.DescriptorMatcher_create(cv.DESCRIPTOR_MATCHER_BRUTEFORCE_HAMMING).match(descriptors1, descriptors2,\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  None)\n",
-    "\n",
+    "\tmatches = cv.DescriptorMatcher_create(cv.NORM_HAMMING).match(descriptors1, descriptors2, None)\n",
     "\tmatches = filterMatches(matches)\n",
     "\n",
-    "\t# Draw top matches\n",
     "\timMatches = cv.drawMatches(image1, keyPoints1, image2, keyPoints2, matches, None)\n",
     "\tcv.imshow(\"Matches\", imMatches)"
    ],
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 158,
    "outputs": [],
    "source": [
     "def showResult(_im, _imReference):\n",
@@ -87,14 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 159,
    "outputs": [],
    "source": [
-    "#Test 1\n",
-    "# Read reference image\n",
     "imReference = cv.imread(\"formReference.jpg\", cv.IMREAD_COLOR)\n",
-    "\n",
-    "# Read image to be aligned\n",
     "im = cv.imread(\"form.jpg\", cv.IMREAD_COLOR)"
    ],
    "metadata": {
@@ -103,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 160,
    "outputs": [],
    "source": [
     "showResult(im, imReference)"
@@ -114,14 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 161,
    "outputs": [],
    "source": [
-    "#Test 2\n",
-    "# Read reference image\n",
     "imReference = cv.imread(\"ColiseumReference.jpg\", cv.IMREAD_COLOR)\n",
-    "\n",
-    "# Read image to be aligned\n",
     "im = cv.imread(\"Coliseum.jpg\", cv.IMREAD_COLOR)\n",
     "imReference = cv.resize(imReference, (im.shape[1], im.shape[0]))"
    ],
@@ -131,34 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "outputs": [],
-   "source": [
-    "showResult(im, imReference)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [],
-   "source": [
-    "#Test 3\n",
-    "# Read reference image\n",
-    "imReference = cv.imread(\"LaysReference.png\", cv.IMREAD_COLOR)\n",
-    "\n",
-    "# Read image to be aligned\n",
-    "im = cv.imread(\"Lays.jpg\", cv.IMREAD_COLOR)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 162,
    "outputs": [],
    "source": [
     "showResult(im, imReference)"
