ничего не понятно и не очень интересно

--- a/task11/Segmentation.ipynb
+++ b/task11/Segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -10,10 +10,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "save_steps = False\n",
-    "low_threshold = 0\n",
-    "iteration_num = 5\n",
-    "src = cv2.imread('img.png')"
+    "saveSteps = False\n",
+    "lowThreshold = 0\n",
+    "numberOfIterations = 5\n",
+    "image = cv2.imread('img.png')"
    ],
    "metadata": {
     "collapsed": false
@@ -21,37 +21,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def update():\n",
-    "\timg = src.copy()\n",
-    "\tgray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "\t_, thresh = cv2.threshold(gray, low_threshold, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
+    "\timg_copy = image.copy()\n",
+    "\tgray = cv2.cvtColor(img_copy, cv2.COLOR_BGR2GRAY)\n",
+    "\t_, thresh = cv2.threshold(gray, lowThreshold, 255, cv2.THRESH_BINARY_INV + cv2.THRESH_OTSU)\n",
     "\tkernel = np.ones((3, 3), np.uint8)\n",
-    "\tsure_bg = cv2.dilate(thresh, kernel, iterations=iteration_num)\n",
-    "\tdist_transform = cv2.distanceTransform(sure_bg, 1, 5)\n",
-    "\tdist_transform = np.uint8(dist_transform)\n",
-    "\t_, sure_fg = cv2.threshold(dist_transform, low_threshold, 255, 0)\n",
+    "\tbackground = cv2.dilate(thresh, kernel, iterations=numberOfIterations)\n",
+    "\tafterDistanceTransformation = cv2.distanceTransform(background, 1, 5)\n",
+    "\tafterDistanceTransformation = np.uint8(afterDistanceTransformation)\n",
+    "\t_, foreground = cv2.threshold(afterDistanceTransformation, lowThreshold, 255, 0)\n",
     "\n",
-    "\tsure_fg = np.uint8(sure_fg)\n",
-    "\tunknown = cv2.subtract(sure_bg, sure_fg)\n",
+    "\tforeground = np.uint8(foreground)\n",
+    "\tunknownRegions = cv2.subtract(background, foreground)\n",
     "\n",
-    "\t_, markers = cv2.connectedComponents(sure_fg)\n",
+    "\t_, markers = cv2.connectedComponents(foreground)\n",
     "\tmarkers = markers + 1\n",
     "\n",
-    "\tmarkers[unknown == 255] = 0\n",
+    "\tmarkers[unknownRegions == 255] = 0\n",
     "\n",
-    "\tmarkers = cv2.watershed(img, markers)\n",
+    "\tmarkers = cv2.watershed(img_copy, markers)\n",
     "\n",
-    "\timg[markers == -1] = (0, 0, 255)\n",
-    "\t# img = cv2.resize(img, (800, 800))\n",
-    "\tcv2.imshow(\"img\", img)\n",
+    "\timg_copy[markers == -1] = (0, 0, 255)\n",
+    "\tcv2.imshow(\"img\", img_copy)\n",
     "\n",
-    "\tif save_steps:\n",
+    "\tif saveSteps:\n",
     "\t\tplt.rcParams['figure.dpi'] = 250\n",
     "\t\tplt.subplot(241)\n",
-    "\t\tplt.imshow(cv2.cvtColor(src, cv2.COLOR_BGR2RGB)),\n",
+    "\t\tplt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB)),\n",
     "\t\tplt.title('Original')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(242)\n",
@@ -59,19 +58,19 @@
     "\t\tplt.title('Threshold')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(243)\n",
-    "\t\tplt.imshow(sure_bg, cmap='gray'),\n",
+    "\t\tplt.imshow(background, cmap='gray'),\n",
     "\t\tplt.title('Dilate')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(244)\n",
-    "\t\tplt.imshow(dist_transform, cmap='gray'),\n",
+    "\t\tplt.imshow(afterDistanceTransformation, cmap='gray'),\n",
     "\t\tplt.title('Dist Transform')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(245)\n",
-    "\t\tplt.imshow(sure_fg, cmap='gray'),\n",
+    "\t\tplt.imshow(foreground, cmap='gray'),\n",
     "\t\tplt.title('Threshold')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(246)\n",
-    "\t\tplt.imshow(unknown, cmap='gray'),\n",
+    "\t\tplt.imshow(unknownRegions, cmap='gray'),\n",
     "\t\tplt.title('Unknow')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(247)\n",
@@ -79,21 +78,21 @@
     "\t\tplt.title('Markers')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.subplot(248)\n",
-    "\t\tplt.imshow(cv2.cvtColor(img, cv2.COLOR_BGR2RGB)),\n",
+    "\t\tplt.imshow(cv2.cvtColor(img_copy, cv2.COLOR_BGR2RGB)),\n",
     "\t\tplt.title('Result')\n",
     "\t\tplt.axis('off')\n",
     "\t\tplt.savefig('steps.png')\n",
     "\n",
     "\n",
-    "def change_low_threshold(val):\n",
-    "\tglobal low_threshold\n",
-    "\tlow_threshold = val\n",
+    "def changeLowThresholdValue(val):\n",
+    "\tglobal lowThreshold\n",
+    "\tlowThreshold = val\n",
     "\tupdate()\n",
     "\n",
     "\n",
-    "def change_iteration_num(val):\n",
-    "\tglobal iteration_num\n",
-    "\titeration_num = val\n",
+    "def changeNumberOfIterations(val):\n",
+    "\tglobal numberOfIterations\n",
+    "\tnumberOfIterations = val\n",
     "\tupdate()"
    ],
    "metadata": {
@@ -102,12 +101,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "cv2.namedWindow('Control')\n",
-    "cv2.createTrackbar('thresh low', 'Control', 20, 255, change_low_threshold)\n",
-    "cv2.createTrackbar('iterations', 'Control', 5, 100, change_iteration_num)\n",
+    "cv2.createTrackbar('thresh low', 'Control', 20, 255, changeLowThresholdValue)\n",
+    "cv2.createTrackbar('iterations', 'Control', 5, 100, changeNumberOfIterations)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ],
