--- a/task8/LineDetection.ipynb
+++ b/task8/LineDetection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "img = cv.imread('Task-8.jpg')\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "def update():\n",
@@ -94,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "outputs": [],
    "source": [
-    "cv.imshow('Image', img)\n",
+    "# cv.imshow('Image', img)\n",
     "cv.namedWindow('Params')\n",
     "cv.createTrackbar('rho', 'Params', 100, 1000, change_rho_size)\n",
     "cv.createTrackbar('theta', 'Params', theta_degrees_value, 360, change_theta_size)\n",
     "cv.createTrackbar('hough threshold', 'Params', hough_threshold, 500, change_hough_treshold)\n",
-    "cv.createTrackbar('low threshold', 'Params', low_threshold, 500, change_low_treshold)\n",
-    "cv.createTrackbar('high threshold', 'Params', high_threshold, 500, change_high_threshold)\n",
+    "cv.createTrackbar('low threshold', 'Params', canny_low_threshold, 500, change_low_treshold)\n",
+    "cv.createTrackbar('high threshold', 'Params', canny_high_threshold, 500, change_high_threshold)\n",
     "cv.createTrackbar('min line length', 'Params', min_line_length, 50, change_min_line_length)\n",
     "cv.createTrackbar('max line gap', 'Params', max_line_gap, 50, change_max_line_gap)\n",
     "cv.waitKey(0)\n",
