--- a/task13/AgeAndGenderRecognition.ipynb
+++ b/task13/AgeAndGenderRecognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -73,91 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 173ms/step\n",
-      "1/1 [==============================] - 0s 130ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 48ms/step\n",
-      "5/5 [==============================] - 0s 7ms/step\n",
-      "1/1 [==============================] - 0s 381ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 3s 3s/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:02<00:02,  2.67s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 2s 2s/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:04<00:00,  2.42s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "recognizeAgeAndGender('girl1.jpg')\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 127ms/step\n",
-      "1/1 [==============================] - 0s 52ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
+      "1/1 [==============================] - 0s 302ms/step\n",
+      "1/1 [==============================] - 0s 108ms/step\n",
       "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "5/5 [==============================] - 0s 8ms/step\n",
-      "1/1 [==============================] - 0s 49ms/step\n"
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
+      "5/5 [==============================] - 0s 5ms/step\n",
+      "1/1 [==============================] - 0s 134ms/step\n"
      ]
     },
     {
@@ -178,21 +111,88 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:01<00:01,  1.44s/it]"
+      "Action: gender:  50%|█████     | 1/2 [00:02<00:02,  2.06s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 389ms/step\n"
+      "1/1 [==============================] - 0s 413ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:01<00:00,  1.03it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:02<00:00,  1.26s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "recognizeAgeAndGender('girl1.jpg')\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 89ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 34ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "5/5 [==============================] - 0s 5ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 260ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 225ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.41it/s]\n"
      ]
     }
    ],
@@ -207,25 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 81ms/step\n",
-      "1/1 [==============================] - 0s 51ms/step\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 66ms/step\n",
+      "1/1 [==============================] - 0s 47ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
       "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 57ms/step\n",
+      "1/1 [==============================] - 0s 22ms/step\n",
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "2/2 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 63ms/step\n"
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "2/2 [==============================] - 0s 5ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n"
      ]
     },
     {
@@ -239,28 +239,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 249ms/step\n"
+      "1/1 [==============================] - 0s 242ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.10it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.24it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 259ms/step\n"
+      "1/1 [==============================] - 0s 250ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.18it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.35it/s]\n"
      ]
     }
    ],
@@ -275,25 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 66ms/step\n",
-      "1/1 [==============================] - 0s 43ms/step\n",
-      "1/1 [==============================] - 0s 41ms/step\n",
-      "1/1 [==============================] - 0s 44ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 76ms/step\n",
+      "1/1 [==============================] - 0s 46ms/step\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
       "7/7 [==============================] - 0s 7ms/step\n",
-      "1/1 [==============================] - 0s 34ms/step\n"
+      "1/1 [==============================] - 0s 57ms/step\n"
      ]
     }
    ],
@@ -308,25 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 85ms/step\n",
-      "1/1 [==============================] - 0s 54ms/step\n",
-      "1/1 [==============================] - 0s 39ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 96ms/step\n",
+      "1/1 [==============================] - 0s 64ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
-      "18/18 [==============================] - 0s 7ms/step\n",
-      "2/2 [==============================] - 0s 7ms/step\n"
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "18/18 [==============================] - 0s 6ms/step\n",
+      "2/2 [==============================] - 0s 8ms/step\n"
      ]
     },
     {
@@ -340,28 +340,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 309ms/step\n"
+      "1/1 [==============================] - 0s 313ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.43it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 227ms/step\n"
+      "1/1 [==============================] - 0s 306ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.94it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.81it/s]\n"
      ]
     }
    ],
@@ -376,25 +376,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 86ms/step\n",
-      "1/1 [==============================] - 0s 56ms/step\n",
-      "1/1 [==============================] - 0s 43ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
+      "1/1 [==============================] - 0s 104ms/step\n",
+      "1/1 [==============================] - 0s 52ms/step\n",
+      "1/1 [==============================] - 0s 42ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 34ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n",
-      "1/1 [==============================] - 0s 60ms/step\n",
+      "1/1 [==============================] - 0s 24ms/step\n",
       "15/15 [==============================] - 0s 8ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n"
+      "1/1 [==============================] - 0s 24ms/step\n"
      ]
     },
     {
@@ -408,33 +408,158 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 254ms/step\n"
+      "1/1 [==============================] - 0s 377ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.03it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  1.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 413ms/step\n"
+      "1/1 [==============================] - 0s 289ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.11it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.36it/s]\n"
      ]
     }
    ],
    "source": [
     "recognizeAgeAndGender('woman2.jpg')\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 57ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
+      "8/8 [==============================] - 0s 7ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 260ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 253ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.36it/s]\n",
+      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 237ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 230ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.65it/s]\n",
+      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 234ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 231ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.68it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "recognizeAgeAndGender('img.png')\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
    ],
