--- a/task13/AgeAndGenderRecognition.ipynb
+++ b/task13/AgeAndGenderRecognition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -73,24 +73,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 302ms/step\n",
-      "1/1 [==============================] - 0s 108ms/step\n",
+      "1/1 [==============================] - 0s 419ms/step\n",
+      "1/1 [==============================] - 0s 130ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
       "1/1 [==============================] - 0s 33ms/step\n",
       "1/1 [==============================] - 0s 29ms/step\n",
+      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 27ms/step\n",
       "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 25ms/step\n",
+      "1/1 [==============================] - 0s 26ms/step\n",
+      "5/5 [==============================] - 0s 6ms/step\n",
+      "1/1 [==============================] - 2s 2s/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 4s 4s/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender:  50%|█████     | 1/2 [00:04<00:04,  4.11s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 4s 4s/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Action: gender: 100%|██████████| 2/2 [00:08<00:00,  4.37s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "recognizeAgeAndGender('girl1.jpg')\n",
+    "cv.waitKey(0)\n",
+    "cv.destroyAllWindows()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 115ms/step\n",
+      "1/1 [==============================] - 0s 81ms/step\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "1/1 [==============================] - 0s 44ms/step\n",
+      "1/1 [==============================] - 0s 43ms/step\n",
+      "1/1 [==============================] - 0s 45ms/step\n",
+      "1/1 [==============================] - 0s 53ms/step\n",
       "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "5/5 [==============================] - 0s 5ms/step\n",
-      "1/1 [==============================] - 0s 134ms/step\n"
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "5/5 [==============================] - 0s 9ms/step\n",
+      "1/1 [==============================] - 0s 66ms/step\n"
      ]
     },
     {
@@ -111,88 +178,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:02<00:02,  2.06s/it]"
+      "Action: gender:  50%|█████     | 1/2 [00:01<00:01,  1.45s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 413ms/step\n"
+      "1/1 [==============================] - 1s 682ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:02<00:00,  1.26s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "recognizeAgeAndGender('girl1.jpg')\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 89ms/step\n",
-      "1/1 [==============================] - 0s 39ms/step\n",
-      "1/1 [==============================] - 0s 37ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 34ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "5/5 [==============================] - 0s 5ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 260ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.19it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 225ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.41it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:02<00:00,  1.11s/it]\n"
      ]
     }
    ],
@@ -207,25 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 66ms/step\n",
-      "1/1 [==============================] - 0s 47ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 57ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n",
+      "1/1 [==============================] - 0s 84ms/step\n",
+      "1/1 [==============================] - 0s 69ms/step\n",
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 36ms/step\n",
       "1/1 [==============================] - 0s 50ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "2/2 [==============================] - 0s 5ms/step\n",
-      "1/1 [==============================] - 0s 36ms/step\n"
+      "1/1 [==============================] - 0s 50ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "2/2 [==============================] - 0s 9ms/step\n",
+      "1/1 [==============================] - 0s 58ms/step\n"
      ]
     },
     {
@@ -239,28 +239,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 242ms/step\n"
+      "1/1 [==============================] - 1s 774ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.24it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  1.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 250ms/step\n"
+      "1/1 [==============================] - 2s 2s/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.35it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:02<00:00,  1.28s/it]\n"
      ]
     }
    ],
@@ -275,25 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 76ms/step\n",
-      "1/1 [==============================] - 0s 46ms/step\n",
-      "1/1 [==============================] - 0s 45ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 0s 38ms/step\n",
-      "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
+      "1/1 [==============================] - 0s 97ms/step\n",
+      "1/1 [==============================] - 0s 75ms/step\n",
+      "1/1 [==============================] - 0s 118ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
+      "1/1 [==============================] - 0s 30ms/step\n",
+      "1/1 [==============================] - 0s 43ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
+      "1/1 [==============================] - 0s 35ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
       "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "7/7 [==============================] - 0s 7ms/step\n",
-      "1/1 [==============================] - 0s 57ms/step\n"
+      "7/7 [==============================] - 0s 9ms/step\n",
+      "1/1 [==============================] - 0s 39ms/step\n"
      ]
     }
    ],
@@ -308,25 +308,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 96ms/step\n",
-      "1/1 [==============================] - 0s 64ms/step\n",
+      "1/1 [==============================] - 0s 75ms/step\n",
+      "1/1 [==============================] - 0s 54ms/step\n",
+      "1/1 [==============================] - 0s 48ms/step\n",
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 92ms/step\n",
       "1/1 [==============================] - 0s 38ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
       "1/1 [==============================] - 0s 26ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
       "1/1 [==============================] - 0s 29ms/step\n",
-      "18/18 [==============================] - 0s 6ms/step\n",
-      "2/2 [==============================] - 0s 8ms/step\n"
+      "1/1 [==============================] - 0s 42ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
+      "18/18 [==============================] - 0s 9ms/step\n",
+      "2/2 [==============================] - 0s 28ms/step\n"
      ]
     },
     {
@@ -340,28 +340,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 313ms/step\n"
+      "1/1 [==============================] - 0s 294ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.75it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.54it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 306ms/step\n"
+      "1/1 [==============================] - 0s 279ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.81it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.66it/s]\n"
      ]
     }
    ],
@@ -376,25 +376,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 104ms/step\n",
-      "1/1 [==============================] - 0s 52ms/step\n",
-      "1/1 [==============================] - 0s 42ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 34ms/step\n",
+      "1/1 [==============================] - 0s 197ms/step\n",
+      "1/1 [==============================] - 0s 77ms/step\n",
+      "1/1 [==============================] - 0s 63ms/step\n",
+      "1/1 [==============================] - 0s 56ms/step\n",
       "1/1 [==============================] - 0s 31ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n",
-      "15/15 [==============================] - 0s 8ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n"
+      "1/1 [==============================] - 0s 37ms/step\n",
+      "1/1 [==============================] - 0s 32ms/step\n",
+      "1/1 [==============================] - 0s 31ms/step\n",
+      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 84ms/step\n",
+      "1/1 [==============================] - 0s 42ms/step\n",
+      "15/15 [==============================] - 0s 9ms/step\n",
+      "1/1 [==============================] - 0s 33ms/step\n"
      ]
     },
     {
@@ -408,158 +408,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 377ms/step\n"
+      "1/1 [==============================] - 0s 262ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  1.95it/s]"
+      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  2.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 289ms/step\n"
+      "1/1 [==============================] - 0s 306ms/step\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.36it/s]\n"
+      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  2.38it/s]\n"
      ]
     }
    ],
    "source": [
     "recognizeAgeAndGender('woman2.jpg')\n",
-    "cv.waitKey(0)\n",
-    "cv.destroyAllWindows()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 57ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n",
-      "1/1 [==============================] - 0s 29ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n",
-      "1/1 [==============================] - 0s 33ms/step\n",
-      "1/1 [==============================] - 0s 30ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 0s 27ms/step\n",
-      "8/8 [==============================] - 0s 7ms/step\n",
-      "1/1 [==============================] - 0s 38ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 260ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 253ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.36it/s]\n",
-      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 237ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.63it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 230ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.65it/s]\n",
-      "Action: age:   0%|          | 0/2 [00:00<?, ?it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 234ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender:  50%|█████     | 1/2 [00:00<00:00,  3.61it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 231ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Action: gender: 100%|██████████| 2/2 [00:00<00:00,  3.68it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "recognizeAgeAndGender('img.png')\n",
     "cv.waitKey(0)\n",
     "cv.destroyAllWindows()"
    ],
