--- a/task16/task16.ipynb
+++ b/task16/task16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -31,13 +31,14 @@
     "    img = cv.resize(img, (size, size))\n",
     "    data = img.ravel()\n",
     "    X.append(data)\n",
-    "    y.append(0)\n",
+    "    y.append('badger')\n",
+    "\n",
     "for f in os.listdir('/Users/konstantin/ImageProcessing/task16/dataset/chipmunk'):\n",
     "    img = cv.imread('/Users/konstantin/ImageProcessing/task16/dataset/chipmunk/' + f, 0)\n",
     "    img = cv.resize(img, (size, size))\n",
     "    data = img.ravel()\n",
     "    X.append(data)\n",
-    "    y.append(1)\n",
+    "    y.append('chipmunk')\n",
     "    # print(data)"
    ],
    "metadata": {
@@ -46,30 +47,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n",
-      "[1]\n"
+      "['badger']\n",
+      "['chipmunk']\n",
+      "['badger']\n",
+      "['chipmunk']\n"
      ]
     }
    ],
    "source": [
-    "clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
+    "clf = RandomForestClassifier(max_depth=1, random_state=0)\n",
     "clf.fit(X, y)\n",
     "\n",
     "test = []\n",
     "\n",
-    "for f in os.listdir('/Users/konstantin/ImageProcessing/task16/dataset/test'):\n",
-    "    img = cv.imread('/Users/konstantin/ImageProcessing/task16/dataset/test/' + f, 0)\n",
-    "    img = cv.resize(img, (size, size))\n",
-    "    data = img.ravel()\n",
-    "    test.append(data)\n",
+    "img = cv.imread('/Users/konstantin/ImageProcessing/task16/test/badger/badger.png', 0)\n",
+    "img = cv.resize(img, (size, size))\n",
+    "data = img.ravel()\n",
+    "test.append(data)\n",
     "\n",
     "pred = clf.predict([test[0]])\n",
+    "print(pred)\n",
+    "\n",
+    "img = cv.imread('/Users/konstantin/ImageProcessing/task16/test/chipmunk/chipmunk.png', 0)\n",
+    "img = cv.resize(img, (size, size))\n",
+    "data = img.ravel()\n",
+    "test.append(data)\n",
+    "\n",
+    "pred = clf.predict([test[1]])\n",
+    "print(pred)\n",
+    "\n",
+    "img = cv.imread('/Users/konstantin/ImageProcessing/task16/test/badger/img.png', 0)\n",
+    "img = cv.resize(img, (size, size))\n",
+    "data = img.ravel()\n",
+    "test.append(data)\n",
+    "\n",
+    "pred = clf.predict([test[2]])\n",
+    "print(pred)\n",
+    "\n",
+    "img = cv.imread('/Users/konstantin/ImageProcessing/task16/test/chipmunk/ch_img.png', 0)\n",
+    "img = cv.resize(img, (size, size))\n",
+    "data = img.ravel()\n",
+    "test.append(data)\n",
+    "\n",
+    "pred = clf.predict([test[3]])\n",
     "print(pred)"
    ],
    "metadata": {
@@ -78,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "outputs": [],
    "source": [],
    "metadata": {
