now window closes correctly

--- a/task17/PedestrianDetector.ipynb
+++ b/task17/PedestrianDetector.ipynb
@@ -2,38 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "import cv2\n",
     "\n",
-    "# Initializing the HOG person\n",
-    "# detector\n",
     "hog = cv2.HOGDescriptor()\n",
     "hog.setSVMDetector(cv2.HOGDescriptor_getDefaultPeopleDetector())\n",
     "\n",
     "cap = cv2.VideoCapture('video.mp4')\n",
     "\n",
+    "cv2.namedWindow(\"Image\")\n",
+    "\n",
     "while cap.isOpened():\n",
-    "    # Reading the video stream\n",
     "    ret, image = cap.read()\n",
     "    if ret:\n",
-    "        # Detecting all the regions\n",
-    "        # in the Image that has a\n",
-    "        # pedestrians inside it\n",
     "        (regions, _) = hog.detectMultiScale(image, winStride=(4, 4), padding=(8, 8), scale=1.05)\n",
     "\n",
-    "        # Drawing the regions in the\n",
-    "        # Image\n",
     "        for (x, y, w, h) in regions:\n",
     "            cv2.rectangle(image, (x, y), (x + w, y + h), (0, 0, 255), 2)\n",
     "\n",
-    "        # Showing the output Image\n",
     "        cv2.imshow(\"Image\", image)\n",
     "        if cv2.waitKey(25) & 0xFF == ord('q'):\n",
     "            break\n",
@@ -41,19 +39,10 @@
     "        break\n",
     "\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "for i in range(4):\n",
+    "    cv2.waitKey(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
